--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,10 @@ publishing {
 	repositories {
 		maven {
 			name = "GitHubPackages"
-			url = uri("https://maven.pkg.github.com/igsaas/java-shared-utils")
+			url = uri("https://maven.pkg.github.com/igsaas/igsaas-shared-library")
 			credentials {
-				username = System.getenv("GITHUB_ACTOR")
-				password = System.getenv("GITHUB_TOKEN")
+				username = project.findProperty("user")
+				password = project.findProperty("token")
 			}
 		}
 	}
