--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,10 @@ publishing {
 			name = "GitHubPackages"
 			url = uri("https://maven.pkg.github.com/igsaas/igsaas-shared-library")
 			credentials {
-				username = System.getenv("GITHUB_ACTOR") ?: project.findProperty("user")
-				password = System.getenv("GITHUB_TOKEN") ?: project.findProperty("token")
+//				username = System.getenv("GITHUB_ACTOR") ?: project.findProperty("user")
+//				password = System.getenv("GITHUB_TOKEN") ?: project.findProperty("token")
+				username = System.getenv("GITHUB_ACTOR")
+				password = System.getenv("GITHUB_TOKEN")
 			}
 		}
 	}
