--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,16 @@ publishing {
 		maven {
 			name = "GitHubPackages"
 			url = uri("https://maven.pkg.github.com/igsaas/igsaas-shared-library")
-
 			credentials {
 				username = System.getenv("GITHUB_ACTOR") ?: project.findProperty("user")
 				password = System.getenv("GITHUB_TOKEN") ?: project.findProperty("token")
 			}
+		}
+	}
+
+	publications {
+		gpr(MavenPublication) {
+			from(components.java)
 		}
 	}
 }
