--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ publishing {
 
 	publications {
 		gpr(MavenPublication) {
+			groupId = "igsaas"
+			artifactId = "shared-library"
+			version = "0.0.1-SNAPSHOT"
 			from(components.java)
 			versionMapping {
 				usage('java-api') {
