--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ repositories {
 	mavenCentral()
 }
 
+task buildJar(type: Jar) {
+	archiveBaseName = 'igsaas-shared-library'
+	from sourceSets.main.output
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
